# venting

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  build_windows.py  pyproject.toml  requirements-dev.txt  requirements.txt  venting.spec  venting_cli.spec
.github/workflows/: build_windows.yml  ci.yml
archive/: venting_v84.py
docs/: assumptions_v84.md  assumptions_v85.md  assumptions_v9.md  model_v84.md  model_v85.md  user_guide_v10_ru.md  verification_v84.md  verification_v85.md
src/venting/: __init__.py  __main__.py  cases.py  cli.py  compare.py  constants.py  diagnostics.py  flow.py  gates.py  geometry.py  graph.py  io.py  montecarlo.py  plotting.py  presets.py  profiles.py  run.py  solver.py  state_layout.py  thermo.py  validity.py
src/venting/gui/: __init__.py  app.py  config.py  main.py  state_layout.py
tests/: test_compare.py  test_gate_single_node.py  test_gate_two_node.py  test_gates.py  test_gui_config.py  test_gui_import.py  test_gui_state_layout.py  test_jac_sparsity.py  test_montecarlo.py  test_regression_cli_baseline.py  test_short_tube.py  test_solver_stream.py  test_state_layout.py  test_thermo_reference.py  test_topology_and_scalars.py  test_v9_features.py  test_validity_and_units.py
