[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "venting"
version = "8.4.0"
description = "v8.4 edge-based 0D venting solver"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "test1card" }]
dependencies = ["numpy>=1.24", "scipy>=1.10"]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=7.4", "ruff>=0.6", "black>=24.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
