[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "venting"
version = "10.0.0"
description = "v10.0.0 edge-based 0D venting solver"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "test1card" }]
dependencies = [
  "numpy>=1.24,<3",
  "scipy>=1.10,<1.13",
  "matplotlib>=3.7,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<9",
  "pytest-cov>=4.1,<6",
  "ruff>=0.6,<1",
  "black>=24,<26",
  "mypy>=1.8,<2",
  "pre-commit>=3.6,<4",
  "pyinstaller>=6.0",
]
gui = [
  "PySide6>=6.5",
  "pyqtgraph>=0.13",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["venting*"]

[tool.black]
line-length = 88
extend-exclude = "archive/"

[tool.ruff]
line-length = 88
extend-exclude = ["archive"]

[tool.ruff.lint]
select = ["F", "E", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
